--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "sass": "^1.22.9",
+    "scss-compile": "^0.1.7"
   },
   "scripts": {
     "start": "react-scripts start",
