--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "@material-ui/core": "^4.3.1",
     "material-ui": "^0.20.2",
     "node-sass": "^4.12.0",
+    "node-sass-chokidar": "^1.3.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "sass": "^1.22.9",
-    "scss-compile": "^0.1.7"
+    "sass": "^1.22.9"
   },
   "scripts": {
     "start": "react-scripts start",
